finished stretch goal: fixed transparent nav bar

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,8 +3,10 @@
 @import "mixins.less";
 
 .home {
+  margin-top: 15%;
   @media @phone {
     .flex(column, space-between, center);
+    margin-top: 20%;
   }
 
   .intro {
